Fix wrapping properly.

--- a/sass/partials/_code.scss
+++ b/sass/partials/_code.scss
@@ -14,5 +14,5 @@ code {
 
 code.block {
   display: block;
-  white-space: pre;
+  white-space: pre-wrap;
 }
